tests/sources/invalid/expressions/postfix_cast_after_broken_paren.fire
// Parser error: a postfix 'as' cast applied where the preceding
// parenthesized expression failed to parse (unbalanced '(1 +)').

void postfix_cast_after_broken_paren() {
    int32 x = (1 +) as int32;  //~ ERROR FS-PARSE-0012 @19
//~^ ERROR FS-PARSE-0010 @21
//~^^ ERROR FS-PARSE-0010 @21
//~^^^ ERROR FS-PARSE-0010 @29
}
